[gd_scene load_steps=12 format=4 uid="uid://54xwcogj0go"]

[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="1_h8y0o"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="1_la4bf"]
[ext_resource type="Script" uid="uid://cwp52uiy1n64p" path="res://Levels/ThreeLoop/Speedrun2/speedrun2.gd" id="1_v78ln"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="3_llhyv"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="4_818qo"]
[ext_resource type="PackedScene" uid="uid://bc4mudwsgjt1o" path="res://Objects/Portal/portal.tscn" id="5_llhyv"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="6_818qo"]
[ext_resource type="PackedScene" uid="uid://d0y011d078tou" path="res://Objects/Box/box.tscn" id="8_sgx1w"]
[ext_resource type="TileSet" uid="uid://b2bi7bmwgp3qc" path="res://Environment/hazards.tres" id="9_dj3le"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="10_tx0mj"]
[ext_resource type="PackedScene" uid="uid://d2ed68h0eog6" path="res://Objects/Lever/lever.tscn" id="11_q8bty"]

[node name="Speedrun2" type="Node2D"]
script = ExtResource("1_v78ln")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DudDoor" parent="." instance=ExtResource("3_llhyv")]
position = Vector2(45, 48)

[node name="Door" parent="." instance=ExtResource("4_818qo")]
position = Vector2(758, 48)

[node name="Button" parent="." instance=ExtResource("10_tx0mj")]
position = Vector2(767, 176)
box_interactable = false

[node name="Button2" parent="." instance=ExtResource("10_tx0mj")]
position = Vector2(767, 272)
box_interactable = false

[node name="Button3" parent="." instance=ExtResource("10_tx0mj")]
position = Vector2(767, 368)
box_interactable = false

[node name="Lever1" parent="." instance=ExtResource("11_q8bty")]
position = Vector2(35, 176)

[node name="Lever2" parent="." instance=ExtResource("11_q8bty")]
position = Vector2(35, 272)

[node name="Lever3" parent="." instance=ExtResource("11_q8bty")]
position = Vector2(35, 368)

[node name="SlidePlatform1" parent="." instance=ExtResource("6_818qo")]
position = Vector2(664, 48)
rotation = 1.5708
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform1" index="0"]
position = Vector2(664, -16)

[node name="SlidePlatform2" parent="." instance=ExtResource("6_818qo")]
position = Vector2(694, 48)
rotation = 1.5708
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform2" index="0"]
position = Vector2(694, -16)

[node name="SlidePlatform3" parent="." instance=ExtResource("6_818qo")]
position = Vector2(723, 48)
rotation = 1.5708
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform3" index="0"]
position = Vector2(723, -16)

[node name="SlidePlatform4" parent="." instance=ExtResource("6_818qo")]
position = Vector2(125, 298)
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform4" index="0"]
position = Vector2(125, 374)

[node name="SlidePlatform5" parent="." instance=ExtResource("6_818qo")]
position = Vector2(250, 374)
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform5" index="0"]
position = Vector2(250, 298)

[node name="SlidePlatform6" parent="." instance=ExtResource("6_818qo")]
position = Vector2(375, 298)
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform6" index="0"]
position = Vector2(375, 374)

[node name="SlidePlatform7" parent="." instance=ExtResource("6_818qo")]
position = Vector2(500, 374)
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform7" index="0"]
position = Vector2(500, 298)

[node name="SlidePlatform8" parent="." instance=ExtResource("6_818qo")]
position = Vector2(625, 298)
scale = Vector2(1, 0.5)

[node name="Endpoint" parent="SlidePlatform8" index="0"]
position = Vector2(625, 374)

[node name="EndPlatform1" parent="." instance=ExtResource("6_818qo")]
position = Vector2(791, 144)
rotation = 1.5708
scale = Vector2(1, 0.5)
speed = 0.001
frame_delay = 1

[node name="Endpoint" parent="EndPlatform1" index="0"]
position = Vector2(745, 144)

[node name="EndPlatform2" parent="." instance=ExtResource("6_818qo")]
position = Vector2(791, 240)
rotation = 1.5708
scale = Vector2(1, 0.5)
speed = 0.001
frame_delay = 1

[node name="Endpoint" parent="EndPlatform2" index="0"]
position = Vector2(745, 240)

[node name="EndPlatform3" parent="." instance=ExtResource("6_818qo")]
position = Vector2(791, 336)
rotation = 1.5708
scale = Vector2(1, 0.5)
speed = 0.001
frame_delay = 1

[node name="Endpoint" parent="EndPlatform3" index="0"]
position = Vector2(745, 336)

[node name="Box" parent="." instance=ExtResource("8_sgx1w")]
position = Vector2(176, 256)

[node name="Box3" parent="." instance=ExtResource("8_sgx1w")]
position = Vector2(432, 256)

[node name="Box5" parent="." instance=ExtResource("8_sgx1w")]
position = Vector2(688, 256)

[node name="Hazards" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAUAAAAAAAAAAQAHAAUAAAAAAAAAAQAIAAUAAAAAAAAAAQAJAAUAAAAAAAAAAQAKAAUAAAAAAAAAAQALAAUAAAAAAAAAAQAMAAUAAAAAAAAAAQANAAUAAAAAAAAAAQAOAAUAAAAAAAAAAQAPAAUAAAAAAAAAAQAQAAUAAAAAAAAAAQARAAUAAAAAAAAAAQASAAUAAAAAAAAAAQA=")
tile_set = ExtResource("9_dj3le")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAMAAAABAAAAAgABAAIAAAACAAAAAgABAAIAAAADAAAAAgABAAIAAAAEAAAAAgABAAIAAAAFAAAAAgABAAIAAAAGAAAAAgABAAIAAAAHAAAAAgABAAIAAAAIAAAAAgABAAIAAAAJAAAAAgABAAIAAAAKAAAAAgABAAIAAAALAAAAAgABAAIAAAAMAAAAAgABAAIAAAANAAAAAgABAAIAAAAOAAAAAgABAAIAAAAPAAAAAgABAAIAAAAQAAAAAgABAAIAAAARAAAAAgABAAIAAAASAAAAAgABAAIAAAATAAAAAgABAAIAAAAUAAAAAgABAAIAAAAVAAAAAgABAAMAAAAXAAAAAgAAAAMAAAAYAAAAAgABAAIAAAAZAAAAAgABAAIAAAAaAAAAAgABAAIAAAAbAAAAAgABAAIAAAAcAAAAAgABAAIAAAAdAAAAAgABAAIAAAAeAAAAAgABAAIAAAAfAAAAAgABAAMAAAAgAAAAAgAAAAMAAAAhAAAAAgABAAIAAAAiAAAAAgABAAIAAAAjAAAAAgABAAIAAAAkAAAAAgABAAIAAAAlAAAAAgABAAMAAAAmAAAAAgAAAAMAAAAnAAAAAgABAAIAAAAoAAAAAgABAAIAAAApAAAAAgABAAIAAAAqAAAAAgABAAIAAAArAAAAAgABAAIAAAAsAAAAAgABAAIAAAAtAAAAAgABAAIAAAAuAAAAAgABAAIAAAAvAAAAAgABAAIAAAAwAAAAAgABAAIAAAAAAAUAAgACAAMAAAABAAUAAgABAAAAAAACAAUAAgABAAAAAAADAAUAAgABAAAAAAAEAAUAAgABAAAAAAAFAAUAAgABAAAAAAAGAAUAAgABAAAAAAAHAAUAAgABAAAAAAAIAAUAAgABAAAAAAAJAAUAAgABAAAAAAAKAAUAAgABAAAAAAALAAUAAgABAAAAAAAMAAUAAgABAAAAAAANAAUAAgABAAAAAAAOAAUAAgABAAAAAAAPAAUAAgABAAAAAAAQAAUAAgABAAAAAAARAAUAAgAAAAQAAAASAAUAAgACAAMAAAATAAUAAgABAAAAAAAUAAUAAgABAAAAAAAVAAUAAgABAAAAAAAWAAUAAgABAAAAAAAXAAUAAgABAAAAAAAYAAUAAgABAAAAAAAZAAUAAgAAAAQAAAAaAAUAAgABAAEAAAAbAAUAAgABAAEAAAAcAAUAAgACAAMAAAAdAAUAAgABAAAAAAAeAAUAAgABAAAAAAAfAAUAAgABAAAAAAAgAAUAAgABAAAAAAAhAAUAAgABAAAAAAAiAAUAAgAAAAQAAAAjAAUAAgACAAMAAAAkAAUAAgABAAAAAAAlAAUAAgABAAAAAAAmAAUAAgABAAAAAAAnAAUAAgABAAAAAAAoAAUAAgABAAAAAAApAAUAAgABAAAAAAAqAAUAAgABAAAAAAArAAUAAgABAAAAAAAsAAUAAgABAAAAAAAtAAUAAgABAAAAAAAuAAUAAgABAAAAAAAvAAUAAgABAAAAAAAwAAUAAgABAAAAAAAxAAAAAgABAAMAAAAxAAEAAgAAAAEAAAAxAAIAAgAAAAEAAAAxAAMAAgAAAAEAAAAxAAQAAgAAAAEAAAAxAAUAAgAAAAQAAAAAAAEAAgACAAEAAAAAAAIAAgACAAEAAAAAAAMAAgACAAEAAAAAAAQAAgACAAEAAAAAAAYAAgABAAEAAAAAAAcAAgABAAEAAAAAAAgAAgAAAAMAAAAAAAkAAgACAAEAAAAAAAoAAgACAAEAAAAAAAsAAgACAAMAAAABAAYAAgABAAEAAAABAAsAAgABAAAAAAACAAYAAgABAAEAAAACAAsAAgABAAAAAAADAAYAAgAAAAMAAAADAAsAAgABAAAAAAAEAAYAAgABAAIAAAAEAAsAAgABAAAAAAAFAAYAAgABAAIAAAAFAAsAAgABAAAAAAAGAAYAAgABAAIAAAAGAAsAAgABAAAAAAAHAAYAAgABAAIAAAAHAAsAAgABAAAAAAAIAAYAAgABAAIAAAAIAAsAAgABAAAAAAAJAAYAAgABAAIAAAAJAAsAAgABAAAAAAAKAAYAAgABAAIAAAAKAAsAAgAAAAQAAAALAAYAAgABAAIAAAALAAsAAgACAAMAAAAMAAYAAgABAAIAAAAMAAsAAgABAAAAAAANAAYAAgABAAIAAAANAAsAAgABAAAAAAAOAAYAAgABAAIAAAAOAAsAAgABAAAAAAAPAAYAAgABAAIAAAAPAAsAAgABAAAAAAAQAAYAAgABAAIAAAAQAAsAAgABAAAAAAARAAYAAgABAAIAAAARAAsAAgABAAAAAAASAAYAAgABAAIAAAASAAsAAgABAAAAAAATAAYAAgABAAIAAAATAAsAAgAAAAQAAAAUAAYAAgABAAIAAAAUAAsAAgACAAMAAAAVAAYAAgABAAIAAAAVAAsAAgABAAAAAAAWAAYAAgABAAIAAAAWAAsAAgABAAAAAAAXAAYAAgABAAIAAAAXAAsAAgABAAAAAAAYAAYAAgABAAIAAAAYAAsAAgABAAAAAAAZAAYAAgABAAIAAAAZAAsAAgABAAAAAAAaAAYAAgABAAIAAAAaAAsAAgABAAAAAAAbAAYAAgABAAIAAAAbAAsAAgABAAAAAAAcAAYAAgABAAIAAAAcAAsAAgAAAAQAAAAdAAYAAgABAAIAAAAdAAsAAgACAAMAAAAeAAYAAgABAAIAAAAeAAsAAgABAAAAAAAfAAYAAgABAAIAAAAfAAsAAgABAAAAAAAgAAYAAgABAAIAAAAgAAsAAgABAAAAAAAhAAYAAgABAAIAAAAhAAsAAgABAAAAAAAiAAYAAgABAAIAAAAiAAsAAgABAAAAAAAjAAYAAgABAAIAAAAjAAsAAgABAAAAAAAkAAYAAgABAAIAAAAkAAsAAgABAAAAAAAlAAYAAgABAAIAAAAlAAsAAgAAAAQAAAAmAAYAAgABAAIAAAAmAAsAAgACAAMAAAAnAAYAAgABAAIAAAAnAAsAAgABAAAAAAAoAAYAAgABAAIAAAAoAAsAAgABAAAAAAApAAYAAgABAAIAAAApAAsAAgABAAAAAAAqAAYAAgABAAIAAAAqAAsAAgABAAAAAAArAAYAAgABAAIAAAArAAsAAgABAAAAAAAsAAYAAgABAAIAAAAsAAsAAgABAAAAAAAtAAYAAgABAAIAAAAtAAsAAgABAAAAAAAuAAYAAgABAAIAAAAuAAsAAgABAAAAAAAvAAYAAgABAAIAAAAvAAsAAgABAAAAAAAwAAYAAgABAAIAAAAwAAsAAgABAAAAAAAxAAYAAgABAAMAAAAxAAcAAgAAAAEAAAAxAAgAAgAAAAEAAAAxAAkAAgAAAAEAAAAxAAoAAgAAAAEAAAAxAAsAAgAAAAQAAAAAAAwAAgABAAEAAAAAAA0AAgABAAEAAAAAAA4AAgAAAAMAAAAAAA8AAgACAAEAAAAAABAAAgACAAEAAAAAABEAAgACAAMAAAABAAwAAgABAAEAAAABABEAAgABAAAAAAACAAwAAgABAAEAAAACABEAAgABAAAAAAADAAwAAgAAAAMAAAADABEAAgABAAAAAAAEAAwAAgABAAIAAAAEABEAAgABAAAAAAAFAAwAAgABAAIAAAAFABEAAgABAAAAAAAGAAwAAgABAAIAAAAGABEAAgABAAAAAAAHAAwAAgABAAIAAAAHABEAAgABAAAAAAAIAAwAAgABAAIAAAAIABEAAgABAAAAAAAJAAwAAgABAAIAAAAJABEAAgABAAAAAAAKAAwAAgABAAMAAAAKABEAAgABAAAAAAALAAwAAgAAAAMAAAALABEAAgABAAAAAAAMAAwAAgABAAIAAAAMABEAAgABAAAAAAANAAwAAgABAAIAAAANABEAAgABAAAAAAAOAAwAAgABAAIAAAAOABEAAgABAAAAAAAPAAwAAgABAAIAAAAPABEAAgABAAAAAAAQAAwAAgABAAIAAAAQABEAAgABAAAAAAARAAwAAgABAAIAAAARABEAAgABAAAAAAASAAwAAgABAAIAAAASABEAAgABAAAAAAATAAwAAgABAAIAAAATABEAAgABAAAAAAAUAAwAAgABAAIAAAAUABEAAgABAAAAAAAVAAwAAgABAAIAAAAVABEAAgABAAAAAAAWAAwAAgABAAIAAAAWABEAAgABAAAAAAAXAAwAAgABAAIAAAAXABEAAgABAAAAAAAYAAwAAgABAAIAAAAYABEAAgABAAAAAAAZAAwAAgABAAIAAAAZABEAAgABAAAAAAAaAAwAAgABAAMAAAAaABEAAgABAAAAAAAbAAwAAgAAAAMAAAAbABEAAgABAAAAAAAcAAwAAgABAAIAAAAcABEAAgABAAAAAAAdAAwAAgABAAIAAAAdABEAAgABAAAAAAAeAAwAAgABAAIAAAAeABEAAgABAAAAAAAfAAwAAgABAAIAAAAfABEAAgABAAAAAAAgAAwAAgABAAIAAAAgABEAAgABAAAAAAAhAAwAAgABAAIAAAAhABEAAgABAAAAAAAiAAwAAgABAAIAAAAiABEAAgABAAAAAAAjAAwAAgABAAIAAAAjABEAAgABAAAAAAAkAAwAAgABAAIAAAAkABEAAgABAAAAAAAlAAwAAgABAAIAAAAlABEAAgABAAAAAAAmAAwAAgABAAIAAAAmABEAAgABAAAAAAAnAAwAAgABAAIAAAAnABEAAgABAAAAAAAoAAwAAgABAAIAAAAoABEAAgABAAAAAAApAAwAAgABAAIAAAApABEAAgABAAAAAAAqAAwAAgABAAMAAAAqABEAAgABAAAAAAArAAwAAgAAAAMAAAArABEAAgABAAAAAAAsAAwAAgABAAIAAAAsABEAAgABAAAAAAAtAAwAAgABAAIAAAAtABEAAgABAAAAAAAuAAwAAgABAAIAAAAuABEAAgABAAAAAAAvAAwAAgABAAIAAAAvABEAAgABAAAAAAAwAAwAAgABAAIAAAAwABEAAgABAAAAAAAxAAwAAgABAAMAAAAxAA0AAgAAAAEAAAAxAA4AAgAAAAEAAAAxAA8AAgAAAAEAAAAxABAAAgAAAAEAAAAxABEAAgAAAAQAAAAAABIAAgABAAEAAAAAABMAAgABAAEAAAAAABQAAgAAAAMAAAAAABUAAgACAAEAAAAAABYAAgACAAEAAAAAABcAAgACAAMAAAABABIAAgABAAEAAAABABcAAgABAAAAAAACABIAAgABAAEAAAACABcAAgABAAAAAAADABIAAgAAAAMAAAADABcAAgABAAAAAAAEABIAAgABAAIAAAAEABcAAgABAAAAAAAFABIAAgABAAIAAAAFABcAAgABAAAAAAAGABIAAgABAAIAAAAGABcAAgABAAAAAAAHABIAAgABAAIAAAAHABcAAgABAAAAAAAIABIAAgABAAIAAAAIABcAAgABAAAAAAAJABIAAgABAAIAAAAJABcAAgABAAAAAAAKABIAAgABAAIAAAAKABcAAgABAAAAAAALABIAAgABAAIAAAALABcAAgABAAAAAAAMABIAAgABAAIAAAAMABcAAgABAAAAAAANABIAAgABAAIAAAANABcAAgABAAAAAAAOABIAAgABAAIAAAAOABcAAgABAAAAAAAPABIAAgABAAIAAAAPABcAAgABAAAAAAAQABIAAgABAAIAAAAQABcAAgABAAAAAAARABIAAgABAAIAAAARABcAAgABAAAAAAASABIAAgABAAIAAAASABcAAgABAAAAAAATABIAAgABAAIAAAATABcAAgABAAAAAAAUABIAAgABAAIAAAAUABcAAgABAAAAAAAVABIAAgABAAIAAAAVABcAAgABAAAAAAAWABIAAgABAAIAAAAWABcAAgABAAAAAAAXABIAAgABAAIAAAAXABcAAgABAAAAAAAYABIAAgABAAIAAAAYABcAAgABAAAAAAAZABIAAgABAAIAAAAZABcAAgABAAAAAAAaABIAAgABAAIAAAAaABcAAgABAAAAAAAbABIAAgABAAIAAAAbABcAAgABAAAAAAAcABIAAgABAAIAAAAcABcAAgABAAAAAAAdABIAAgABAAIAAAAdABcAAgABAAAAAAAeABIAAgABAAIAAAAeABcAAgABAAAAAAAfABIAAgABAAIAAAAfABcAAgABAAAAAAAgABIAAgABAAIAAAAgABcAAgABAAAAAAAhABIAAgABAAIAAAAhABcAAgABAAAAAAAiABIAAgABAAIAAAAiABcAAgABAAAAAAAjABIAAgABAAIAAAAjABcAAgABAAAAAAAkABIAAgABAAIAAAAkABcAAgABAAAAAAAlABIAAgABAAIAAAAlABcAAgABAAAAAAAmABIAAgABAAIAAAAmABcAAgABAAAAAAAnABIAAgABAAIAAAAnABcAAgABAAAAAAAoABIAAgABAAIAAAAoABcAAgABAAAAAAApABIAAgABAAIAAAApABcAAgABAAAAAAAqABIAAgABAAIAAAAqABcAAgABAAAAAAArABIAAgABAAIAAAArABcAAgABAAAAAAAsABIAAgABAAIAAAAsABcAAgABAAAAAAAtABIAAgABAAIAAAAtABcAAgABAAAAAAAuABIAAgABAAIAAAAuABcAAgABAAAAAAAvABIAAgABAAIAAAAvABcAAgABAAAAAAAwABIAAgABAAIAAAAwABcAAgABAAAAAAAxABIAAgABAAMAAAAxABMAAgAAAAEAAAAxABQAAgAAAAEAAAAxABUAAgAAAAEAAAAxABYAAgAAAAEAAAAxABcAAgAAAAQAAAD//wAAAgABAAEAAAD//wEAAgABAAEAAAD//wIAAgABAAEAAAD//wMAAgABAAEAAAD//wQAAgABAAEAAAD//wUAAgABAAEAAAD//wYAAgABAAEAAAD//wcAAgABAAEAAAD//wgAAgABAAEAAAD//wkAAgABAAEAAAD//woAAgABAAEAAAD//wsAAgABAAEAAAD//wwAAgABAAEAAAD//w0AAgABAAEAAAD//w4AAgABAAEAAAD//w8AAgABAAEAAAD//xAAAgABAAEAAAD//xEAAgABAAEAAAD//xIAAgABAAEAAAD//xMAAgABAAEAAAD//xQAAgABAAEAAAD//xUAAgABAAEAAAD//xYAAgABAAEAAAD//xcAAgABAAEAAAD//xgAAgABAAEAAAAAABgAAgABAAEAAAABABgAAgABAAEAAAACABgAAgABAAEAAAADABgAAgABAAEAAAAEABgAAgABAAEAAAAFABgAAgABAAEAAAAGABgAAgABAAEAAAAHABgAAgABAAEAAAAIABgAAgABAAEAAAAJABgAAgABAAEAAAAKABgAAgABAAEAAAALABgAAgABAAEAAAAMABgAAgABAAEAAAANABgAAgABAAEAAAAOABgAAgABAAEAAAAPABgAAgABAAEAAAAQABgAAgABAAEAAAARABgAAgABAAEAAAASABgAAgABAAEAAAATABgAAgABAAEAAAAUABgAAgABAAEAAAAVABgAAgABAAEAAAAWABgAAgABAAEAAAAXABgAAgABAAEAAAAYABgAAgABAAEAAAAZABgAAgABAAEAAAAaABgAAgABAAEAAAAbABgAAgABAAEAAAAcABgAAgABAAEAAAAdABgAAgABAAEAAAAeABgAAgABAAEAAAAfABgAAgABAAEAAAAgABgAAgABAAEAAAAhABgAAgABAAEAAAAiABgAAgABAAEAAAAjABgAAgABAAEAAAAkABgAAgABAAEAAAAlABgAAgABAAEAAAAmABgAAgABAAEAAAAnABgAAgABAAEAAAAoABgAAgABAAEAAAApABgAAgABAAEAAAAqABgAAgABAAEAAAArABgAAgABAAEAAAAsABgAAgABAAEAAAAtABgAAgABAAEAAAAuABgAAgABAAEAAAAvABgAAgABAAEAAAAwABgAAgABAAEAAAAxABgAAgABAAEAAAAyABgAAgABAAEAAAAyABcAAgABAAEAAAAyABYAAgABAAEAAAAyABUAAgABAAEAAAAyABQAAgABAAEAAAAyABMAAgABAAEAAAAyABIAAgABAAEAAAAyABEAAgABAAEAAAAyABAAAgABAAEAAAAyAA8AAgABAAEAAAAyAA4AAgABAAEAAAAyAA0AAgABAAEAAAAyAAwAAgABAAEAAAAyAAsAAgABAAEAAAAyAAoAAgABAAEAAAAyAAkAAgABAAEAAAAyAAgAAgABAAEAAAAyAAcAAgABAAEAAAAyAAYAAgABAAEAAAAyAAUAAgABAAEAAAAyAAQAAgABAAEAAAAyAAMAAgABAAEAAAAyAAIAAgABAAEAAAAyAAEAAgABAAEAAAAyAAAAAgABAAEAAAAyAP//AgABAAEAAAAxAP//AgABAAEAAAAwAP//AgABAAEAAAAvAP//AgABAAEAAAAuAP//AgABAAEAAAAtAP//AgABAAEAAAAsAP//AgABAAEAAAArAP//AgABAAEAAAAqAP//AgABAAEAAAApAP//AgABAAEAAAAoAP//AgABAAEAAAAnAP//AgABAAEAAAAmAP//AgABAAEAAAAlAP//AgABAAEAAAAkAP//AgABAAEAAAAjAP//AgABAAEAAAAiAP//AgABAAEAAAAhAP//AgABAAEAAAAgAP//AgABAAEAAAAfAP//AgABAAEAAAAeAP//AgABAAEAAAAdAP//AgABAAEAAAAcAP//AgABAAEAAAAbAP//AgABAAEAAAAaAP//AgABAAEAAAAZAP//AgABAAEAAAAYAP//AgABAAEAAAAXAP//AgABAAEAAAAWAP//AgABAAEAAAAVAP//AgABAAEAAAAUAP//AgABAAEAAAATAP//AgABAAEAAAASAP//AgABAAEAAAARAP//AgABAAEAAAAQAP//AgABAAEAAAAPAP//AgABAAEAAAAOAP//AgABAAEAAAANAP//AgABAAEAAAAMAP//AgABAAEAAAALAP//AgABAAEAAAAKAP//AgABAAEAAAAJAP//AgABAAEAAAAIAP//AgABAAEAAAAHAP//AgABAAEAAAAGAP//AgABAAEAAAAFAP//AgABAAEAAAAEAP//AgABAAEAAAADAP//AgABAAEAAAACAP//AgABAAEAAAABAP//AgABAAEAAAAAAP//AgABAAEAAAD/////AgABAAEAAAARAAMAAgAAAAAAAAARAAQAAgAAAAEAAAASAAMAAgACAAAAAAASAAQAAgACAAEAAAAWAAEAAgABAAEAAAAWAAIAAgABAAIAAAAXAAEAAgACAAEAAAAcAAMAAgACAAAAAAAcAAQAAgACAAEAAAAfAAEAAgAAAAEAAAAfAAIAAgAAAAIAAAAgAAEAAgACAAEAAAAgAAIAAgACAAIAAAAiAAMAAgAAAAAAAAAiAAQAAgAAAAEAAAAjAAMAAgACAAAAAAAjAAQAAgACAAEAAAAlAAEAAgAAAAEAAAAlAAIAAgAAAAIAAAAmAAEAAgACAAEAAAAmAAIAAgACAAIAAAAZAAMAAgAAAAAAAAAaAAMAAgABAAAAAAAbAAMAAgABAAAAAAAbAAQAAgABAAEAAAAaAAQAAgABAAEAAAAZAAQAAgAAAAEAAAAXAAIAAgACAAIAAAAVAAIAAgAAAAIAAAAVAAEAAgAAAAEAAAAKAA4AAgAAAAIAAAALAA4AAgACAAIAAAAKAA0AAgAAAAEAAAALAA0AAgACAAEAAAAaAA0AAgAAAAEAAAAaAA4AAgAAAAIAAAAbAA0AAgACAAEAAAAbAA4AAgACAAIAAAAqAA0AAgAAAAEAAAAqAA4AAgAAAAIAAAArAA0AAgACAAEAAAArAA4AAgACAAIAAAAKAAoAAgAAAAAAAAALAAoAAgACAAAAAAAUAAoAAgACAAAAAAATAAoAAgAAAAAAAAAcAAoAAgAAAAAAAAAdAAoAAgACAAAAAAAlAAoAAgAAAAAAAAAmAAoAAgACAAAAAAACAAgAAgABAAIAAAACAAcAAgABAAEAAAADAAgAAgACAAIAAAADAAcAAgACAAEAAAACAA0AAgABAAEAAAACAA4AAgABAAIAAAADAA0AAgACAAEAAAADAA4AAgACAAIAAAACABMAAgABAAEAAAACABQAAgABAAIAAAADABMAAgACAAEAAAADABQAAgACAAIAAAABAAgAAgABAAIAAAABAA4AAgABAAIAAAABABQAAgABAAIAAAABABMAAgABAAEAAAABAA0AAgABAAEAAAABAAcAAgABAAEAAAAWAAAAAgABAAEAAAA=")
tile_set = ExtResource("1_h8y0o")

[node name="Portal1" parent="." instance=ExtResource("5_llhyv")]
position = Vector2(100, 81)
rotation = 1.5708

[node name="Portal2" parent="." instance=ExtResource("5_llhyv")]
position = Vector2(20, 160)

[node name="Portal3" parent="." instance=ExtResource("5_llhyv")]
position = Vector2(150, 81)
rotation = 1.5708
color = 1

[node name="Portal4" parent="." instance=ExtResource("5_llhyv")]
position = Vector2(20, 255)
color = 1

[node name="Portal5" parent="." instance=ExtResource("5_llhyv")]
position = Vector2(200, 81)
rotation = 1.5708
color = 2

[node name="Portal6" parent="." instance=ExtResource("5_llhyv")]
position = Vector2(20, 351)
color = 2

[node name="Player" parent="." instance=ExtResource("1_la4bf")]
position = Vector2(47, 80)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 800
limit_bottom = 384

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="just_pressed" from="Button" to="." method="_on_button_just_pressed"]
[connection signal="just_unpressed" from="Button" to="." method="_on_button_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]
[connection signal="just_pressed" from="Button3" to="." method="_on_button_3_just_pressed"]
[connection signal="just_unpressed" from="Button3" to="." method="_on_button_3_just_unpressed"]
[connection signal="switched" from="Lever1" to="." method="_on_lever_1_switched"]
[connection signal="switched" from="Lever2" to="." method="_on_lever_2_switched"]
[connection signal="switched" from="Lever3" to="." method="_on_lever_3_switched"]
[connection signal="body_entered" from="Hazards/Laser" to="Hazards/Laser" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239863" to="Hazards/@Area2D@239863" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239864" to="Hazards/@Area2D@239864" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239865" to="Hazards/@Area2D@239865" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239866" to="Hazards/@Area2D@239866" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239867" to="Hazards/@Area2D@239867" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239868" to="Hazards/@Area2D@239868" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239869" to="Hazards/@Area2D@239869" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239870" to="Hazards/@Area2D@239870" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239871" to="Hazards/@Area2D@239871" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239872" to="Hazards/@Area2D@239872" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239873" to="Hazards/@Area2D@239873" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@239874" to="Hazards/@Area2D@239874" method="_on_body_entered"]

[editable path="SlidePlatform1"]
[editable path="SlidePlatform2"]
[editable path="SlidePlatform3"]
[editable path="SlidePlatform4"]
[editable path="SlidePlatform5"]
[editable path="SlidePlatform6"]
[editable path="SlidePlatform7"]
[editable path="SlidePlatform8"]
[editable path="EndPlatform1"]
[editable path="EndPlatform2"]
[editable path="EndPlatform3"]
